--- a/V1_Origen_Putumayo/package.json
+++ b/V1_Origen_Putumayo/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.2.0",
     "@fortawesome/react-fontawesome": "^3.2.0",
     "@supabase/supabase-js": "^2.91.1",
+    "@vercel/analytics": "^1.6.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-helmet-async": "^2.0.5",
